--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ contourpy==1.3.3
 cycler==0.12.1
 debugpy==1.8.17
 decorator==5.2.1
+deflate==0.8.1
 defusedxml==0.7.1
 executing==2.2.1
 fastjsonschema==2.21.2
@@ -105,6 +106,7 @@ terminado==0.18.1
 tinycss2==1.4.0
 torch==2.9.1
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing-extensions==4.15.0
 tzdata==2025.2
